--- a/.github/workflows/build-and-test-app.yml
+++ b/.github/workflows/build-and-test-app.yml
@@ -19,4 +19,4 @@ jobs:
           pip install -r requirements.txt
       - name: Test with unittest
         run: |
-          python -m unittest .\vacancies\test_vacancies_set.py
+          python -m unittest vacancies/test_vacancies_set.py
